# jobsity-challenge

./: .env  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pylintrc  pyproject.toml  pytest.ini
bonus_queries/: cheap_mobile.sql  latest_datasource.sql
jobsity_challenge/: constants.py  generate_fake_data.py  models.py
jobsity_challenge/app/: main.py
jobsity_challenge/config/: init_ddl.sql  pipeline_params.yaml
jobsity_challenge/core/: database.py  pipeline.py  slack.py  trips.py
