[tool.poetry]
name = "jobsity_challenge"
version = "0.1.0"
description = ""
authors = ["Ezequiel Ahumada"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
PyYAML = "^6.0"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.39"
Faker = "13.14"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
pytest-cov = "^3.0.0"
black = "^22.3.0"
pylint = "^2.12.2"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
